--- a/Multi-Linear Regression/Multi-Linear Regression.ipynb
+++ b/Multi-Linear Regression/Multi-Linear Regression.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Importing Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 785,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +21,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Importing Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 786,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +235,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 786,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,8 +246,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Preprocessing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 787,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +264,7 @@
        "(21613, 21)"
       ]
      },
-     "execution_count": 787,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 788,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +305,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 788,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 789,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 790,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +356,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 790,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 791,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 792,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 793,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 794,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 795,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 796,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 797,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 798,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 799,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 800,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 801,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,8 +485,25 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Multi Linear Regression from Scratch"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![image_description](1.png)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 802,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 803,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 804,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 805,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 806,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -593,8 +634,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model Evaluation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 807,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 808,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 809,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 810,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
